--- a/output/authors.html
+++ b/output/authors.html
@@ -22,7 +22,7 @@
 
 
     <!-- Bootstrap -->
-        <link rel="stylesheet" href="https://eliyarson.github.io/blog/theme/css/bootstrap.min.css" type="text/css"/>
+        <link rel="stylesheet" href="https://eliyarson.github.io/blog/theme/css/bootstrap.simplex.min.css" type="text/css"/>
     <link href="https://eliyarson.github.io/blog/theme/css/font-awesome.min.css" rel="stylesheet">
 
     <link href="https://eliyarson.github.io/blog/theme/css/pygments/native.css" rel="stylesheet">
@@ -49,8 +49,11 @@ Blog do Eli            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
+                         <li><a href="https://eliyarson.github.io/blog/pages/about.html">
+                             Sobre
+                          </a></li>
                         <li >
-                            <a href="https://eliyarson.github.io/blog/category/blog.html">Blog</a>
+                            <a href="https://eliyarson.github.io/blog/category/python.html">Python</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -68,7 +71,7 @@ Blog do Eli            </a>
     <div class="row">
         <div class="col-sm-9">
   <h1>Authors on Blog do Eli</h1>
-        <li><a href="https://eliyarson.github.io/blog/author/eli-yarson-nabhan.html">Eli Yarson Nabhan</a> (1)</li>
+        <li><a href="https://eliyarson.github.io/blog/author/eli-yarson.html">Eli Yarson</a> (1)</li>
         </div>
         <div class="col-sm-3" id="sidebar">
             <aside>
