--- a/output/index.html
+++ b/output/index.html
@@ -22,7 +22,7 @@
 
 
     <!-- Bootstrap -->
-        <link rel="stylesheet" href="https://eliyarson.github.io/blog/theme/css/bootstrap.min.css" type="text/css"/>
+        <link rel="stylesheet" href="https://eliyarson.github.io/blog/theme/css/bootstrap.simplex.min.css" type="text/css"/>
     <link href="https://eliyarson.github.io/blog/theme/css/font-awesome.min.css" rel="stylesheet">
 
     <link href="https://eliyarson.github.io/blog/theme/css/pygments/native.css" rel="stylesheet">
@@ -49,8 +49,11 @@ Blog do Eli            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
+                         <li><a href="https://eliyarson.github.io/blog/pages/about.html">
+                             Sobre
+                          </a></li>
                         <li >
-                            <a href="https://eliyarson.github.io/blog/category/blog.html">Blog</a>
+                            <a href="https://eliyarson.github.io/blog/category/python.html">Python</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -68,9 +71,9 @@ Blog do Eli            </a>
     <div class="row">
         <div class="col-sm-9">
             <article>
-                <h2><a href="https://eliyarson.github.io/blog/meu-primeiro-post.html">Meu primeiro post</a></h2>
-                <div class="summary"><p>Testando algo novo.</p>
-                    <a class="btn btn-default btn-xs" href="https://eliyarson.github.io/blog/meu-primeiro-post.html">more ...</a>
+                <h2><a href="https://eliyarson.github.io/blog/meu-blog.html">Construindo um blog em Pelican, Docker e Github Pages.</a></h2>
+                <div class="summary"><p>Um pouco da minha jornada na construção desse blog.</p>
+                    <a class="btn btn-default btn-xs" href="https://eliyarson.github.io/blog/meu-blog.html">more ...</a>
                 </div>
             </article>
             <hr/>
